# src/app.js
@@ -7,6 +7,7 @@ const authRoutes = require('./routes/authRoutes');
 const adminRoutes = require('./routes/adminRoutes');
 const categoryRoutes = require("./routes/categoryRoutes");
 const styleRoutes = require("./routes/styleRoutes");
+const tagRoutes = require("./routes/tagRoutes");
 const uploadRoutes = require("./routes/uploadRoutes");
 const generateRoutes = require("./routes/generateRoutes");
 const walletRoutes = require("./routes/walletRoutes");
@@ -62,6 +63,7 @@ app.use('/api/auth', authRoutes);
 app.use('/api/admin', adminRoutes);
 app.use('/api/categories', categoryRoutes);
 app.use('/api/styles', styleRoutes);
+app.use('/api/tags', tagRoutes);
 app.use('/api/upload', uploadRoutes);
 app.use('/api/generate', generateRoutes);
 app.use('/api/wallet', walletRoutes);
